# api/src/main.py
@@ -2,7 +2,7 @@ from fastapi import FastAPI
 from mangum import Mangum
 
 from exception import add_exception_handlers
-from routers import line, seal
+from routers import line, report
 from setting import DEBUG
 
 app = FastAPI(debug=DEBUG)
@@ -11,9 +11,10 @@ app.include_router(
     line.router,
     prefix="/lineapi",
 )
+
 app.include_router(
-    seal.router,
-    prefix="/seal",
+    report.router,
+    prefix="/report",
 )
 
 add_exception_handlers(app)
@@ -37,8 +38,25 @@ if DEBUG:
         request._receive = receive
 
     def log_info(res_body):
+        # logging.basicConfig(level=logging.DEBUG)
+        # logging.info(f"res_body: {res_body}")
         logging.basicConfig(level=logging.DEBUG)
-        logging.info(f"res_body: {res_body}")
+
+        # レスポンスボディがBlobファイルかどうかを判定する関数
+        def is_blob(body):
+            try:
+                body.decode('utf-8')
+                return False
+            except UnicodeDecodeError:
+                return True
+
+        if is_blob(res_body):
+            # Blobファイルの場合は内容を "[Binary data]" に置き換える
+            # filename = os.path.basename(request.url.path)
+            # logging.info(f"Response contains a binary file: {filename}")
+            res_body = b"[Binary data]"
+
+        logging.info(f"res_body: {res_body.decode('utf-8')}")
 
     @app.middleware('http')
     async def some_middleware(request: Request, call_next):
